// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component AdminLookupFormResult renders api data 1`] = `
<StandardCard
  title="Incites"
>
  <p>
    UTs
     - 
    dummy UT
  </p>
  <StandardCard
    title="Results"
  >
    <React.Fragment>
      <pre>
        [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
      </pre>
    </React.Fragment>
  </StandardCard>
  <WithStyles(Button)
    color="primary"
    onClick={[Function]}
    style={
      Object {
        "marginTop": 20,
      }
    }
    variant="contained"
  >
    New Search
  </WithStyles(Button)>
</StandardCard>
`;

exports[`Component AdminLookupFormResult renders api data when no second field provided 1`] = `
<StandardCard
  title="Incites"
>
  <p>
    UTs
     - 
    dummy UT
  </p>
  <StandardCard
    title="Results"
  >
    <React.Fragment>
      <pre>
        [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
      </pre>
    </React.Fragment>
  </StandardCard>
  <WithStyles(Button)
    color="primary"
    onClick={[Function]}
    style={
      Object {
        "marginTop": 20,
      }
    }
    variant="contained"
  >
    New Search
  </WithStyles(Button)>
</StandardCard>
`;

exports[`Component AdminLookupFormResult should not display the secondary field if reportInOutput is not specifically turned on 1`] = `
<StandardCard
  title="Incites"
>
  <p>
    UTs
     - 
    dummy UT
  </p>
  <StandardCard
    title="Results"
  >
    <React.Fragment>
      <pre>
        [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
      </pre>
    </React.Fragment>
  </StandardCard>
  <WithStyles(Button)
    color="primary"
    onClick={[Function]}
    style={
      Object {
        "marginTop": 20,
      }
    }
    variant="contained"
  >
    New Search
  </WithStyles(Button)>
</StandardCard>
`;

exports[`Component AdminLookupFormResult should display the secondary field when required 1`] = `
<StandardCard
  title="Incites"
>
  <p>
    UTs
     - 
    dummy UT
  </p>
  <p>
    API Key
     - 
    123456789
  </p>
  <StandardCard
    title="Results"
  >
    <React.Fragment>
      <pre>
        [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
      </pre>
    </React.Fragment>
  </StandardCard>
  <WithStyles(Button)
    color="primary"
    onClick={[Function]}
    style={
      Object {
        "marginTop": 20,
      }
    }
    variant="contained"
  >
    New Search
  </WithStyles(Button)>
</StandardCard>
`;
